Revert "行为包 并入 ResourcePack中"
This reverts commit 885cdf1971aaf07de28b5e85fd312476f9d48f3b.